# bb_fabric_finance_mcp_server

./: .gitignore  CLAUDE.md  Dockerfile  config.example.json  pyproject.toml
.claude/: settings.local.json
.claude/bugfix/2026-04-17-azure-env-list-parse/: plan.md  report.md  repro.md
.specify/: init-options.json
.specify/memory/: constitution.md
specs/001-fabric-sql-mcp-server/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-fabric-sql-mcp-server/checklists/: requirements.md
specs/001-fabric-sql-mcp-server/contracts/: mcp-tools.md
src/: auth.py  config.py  database.py  logging_setup.py  models.py  server.py  token_verifier.py
src/tools/: query.py  schema.py  write.py
tests/contract/: test_mcp_tools.py
tests/integration/: test_fabric_connection.py
tests/unit/: test_auth.py  test_config.py  test_database.py  test_token_verifier.py
tests/unit/test_tools/: test_query.py  test_schema.py  test_write.py
