[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bb-fabric-finance-mcp-server"
version = "0.1.0"
description = "HTTP MCP server for querying and modifying data in Microsoft Fabric data warehouses"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "pyodbc>=5.1.0",
    "msal>=1.28.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["B017"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 80
show_missing = true
